Добавили список в секции

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
   <section>
     <div class="container">
       <h2>Первый</h2>
+      <ul>
+        <li>Lorem, ipsum dolor.</li>
+        <li>Expedita, minima eum.</li>
+        <li>Numquam, saepe atque.</li>
+        <li>Architecto, dolores ab!</li>
+        <li>Ex, unde perferendis.</li>
+        <li>Aliquam, doloremque non.</li>
+      </ul>
     </div>
   </section>
 </body>
